Сделано почти все
Добавил функции в вычмате, сделана библиотека по ЭВМ.

--- a/CompArch/Makefile.win
+++ b/CompArch/Makefile.win
@@ -7,9 +7,9 @@ WINDRES = windres.exe
 RES  = 
 OBJ  = sc.o $(RES)
 LINKOBJ  = sc.o $(RES)
-LIBS =  -L"I:/Dev-Cpp/lib"  
-INCS =  -I"I:/Dev-Cpp/include" 
-CXXINCS =  -I"I:/Dev-Cpp/lib/gcc/mingw32/3.4.2/include"  -I"I:/Dev-Cpp/include/c++/3.4.2/backward"  -I"I:/Dev-Cpp/include/c++/3.4.2/mingw32"  -I"I:/Dev-Cpp/include/c++/3.4.2"  -I"I:/Dev-Cpp/include" 
+LIBS =  -L"C:/Dev-Cpp/lib"  
+INCS =  -I"C:/Dev-Cpp/include" 
+CXXINCS =  -I"C:/Dev-Cpp/lib/gcc/mingw32/3.4.2/include"  -I"C:/Dev-Cpp/include/c++/3.4.2/backward"  -I"C:/Dev-Cpp/include/c++/3.4.2/mingw32"  -I"C:/Dev-Cpp/include/c++/3.4.2"  -I"C:/Dev-Cpp/include" 
 BIN  = SimpleComputer.a
 CXXFLAGS = $(CXXINCS)  
 CFLAGS = $(INCS)  
