Начал делать лабу №2 по ОВП
Захват координатов мыши работает немного глючно, но это лучше, чем
ничего

--- a/.gitignore
+++ b/.gitignore
@@ -250,7 +250,8 @@ ModelManifest.xml
 # FAKE - F# Make
 .fake/
 
-# TRPO Coursework-specific files
+# Study-specific files
+project-builds/
 save/
 *.save
 *.cfg
