[ЭВМ]Работа над 3 лабой
Не собирается

--- a/CompArch/Lab3/Makefile~2
+++ b/CompArch/Lab3/Makefile~2
@@ -1,7 +1,7 @@
 #Makefile
 
-main2: clean main2.o libMyTerm.a
-	gcc -o main2 main2.o -L. -lMyTerm 
+main2: clean main2.o libMyTerm.a libSimpleComputer.a
+	gcc -o main2 main2.o -L. -lMyTerm -lSimpleComputer
 
 main2.o: main2.c
 	gcc -c main2.c
@@ -11,6 +11,12 @@ libMyTerm.a: myTerm.o
 
 myTerm.o: myTerm.c
 	gcc -c myTerm.c
+
+libSimpleComputer.a: sc.o
+	ar r libSimpleComputer.a sc.o
+
+sc.o: sc.c
+	gcc -c sc.c
 
 clean:
 	rm -f *.o *.a
