--- a/Elteh/sem2/lab4/lab4-1.qsf
+++ b/Elteh/sem2/lab4/lab4-1.qsf
@@ -18,14 +18,14 @@
 #
 # Quartus II
 # Version 9.1 Build 350 03/24/2010 Service Pack 2 SJ Web Edition
-# Date created = 12:48:38  February 27, 2017
+# Date created = 12:45:00  March 06, 2017
 #
 # -------------------------------------------------------------------------- #
 #
 # Notes:
 #
 # 1) The default values for assignments are stored in the file:
-#		lab4_assignment_defaults.qdf
+#		lab4-1_assignment_defaults.qdf
 #    If this file doesn't exist, see file:
 #		assignment_defaults.qdf
 #
@@ -38,27 +38,23 @@
 
 set_global_assignment -name FAMILY Cyclone
 set_global_assignment -name DEVICE EP1C3T144C8
-set_global_assignment -name TOP_LEVEL_ENTITY lab4
+set_global_assignment -name TOP_LEVEL_ENTITY "lab4-1"
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "9.1 SP2"
-set_global_assignment -name PROJECT_CREATION_TIME_DATE "12:48:38  FEBRUARY 27, 2017"
+set_global_assignment -name PROJECT_CREATION_TIME_DATE "12:45:00  MARCH 06, 2017"
 set_global_assignment -name LAST_QUARTUS_VERSION "9.1 SP2"
 set_global_assignment -name USE_GENERATED_PHYSICAL_CONSTRAINTS OFF -section_id eda_blast_fpga
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
-set_global_assignment -name USE_CONFIGURATION_DEVICE ON
-set_global_assignment -name GENERATE_RBF_FILE ON
-set_global_assignment -name BDF_FILE lab4.bdf
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
 set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
-set_global_assignment -name MISC_FILE "E:/Labs/Elteh/sem2/lab4/lab4.dpf"
+set_global_assignment -name USE_CONFIGURATION_DEVICE ON
+set_global_assignment -name GENERATE_RBF_FILE ON
+set_global_assignment -name BDF_FILE "lab4-1.bdf"
 set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "3.3-V LVTTL"
+set_location_assignment PIN_37 -to C
+set_location_assignment PIN_56 -to D
 set_location_assignment PIN_121 -to Q
-set_location_assignment PIN_56 -to R
-set_location_assignment PIN_55 -to S
-set_location_assignment PIN_122 -to Q1
-set_location_assignment PIN_37 -to Button
-set_location_assignment PIN_54 -to R1
-set_location_assignment PIN_53 -to S1
+set_global_assignment -name MISC_FILE "E:/Labs/Elteh/sem2/lab4/lab4-1.dpf"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
