--- a/Elteh/sem2/lab5/lab5-2.qsf
+++ b/Elteh/sem2/lab5/lab5-2.qsf
@@ -18,14 +18,14 @@
 #
 # Quartus II
 # Version 9.1 Build 350 03/24/2010 Service Pack 2 SJ Web Edition
-# Date created = 13:02:41  March 20, 2017
+# Date created = 12:10:13  March 27, 2017
 #
 # -------------------------------------------------------------------------- #
 #
 # Notes:
 #
 # 1) The default values for assignments are stored in the file:
-#		lab5-1_assignment_defaults.qdf
+#		lab5-2_assignment_defaults.qdf
 #    If this file doesn't exist, see file:
 #		assignment_defaults.qdf
 #
@@ -38,33 +38,32 @@
 
 set_global_assignment -name FAMILY Cyclone
 set_global_assignment -name DEVICE EP1C3T144C8
-set_global_assignment -name TOP_LEVEL_ENTITY "lab5-1"
+set_global_assignment -name TOP_LEVEL_ENTITY "lab5-2"
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "9.1 SP2"
-set_global_assignment -name PROJECT_CREATION_TIME_DATE "13:02:41  MARCH 20, 2017"
+set_global_assignment -name PROJECT_CREATION_TIME_DATE "12:10:13  MARCH 27, 2017"
 set_global_assignment -name LAST_QUARTUS_VERSION "9.1 SP2"
 set_global_assignment -name USE_GENERATED_PHYSICAL_CONSTRAINTS OFF -section_id eda_blast_fpga
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
-set_global_assignment -name BDF_FILE "../lab4/lab5-1.bdf"
-set_global_assignment -name BDF_FILE "lab5-1.bdf"
-set_global_assignment -name MISC_FILE "E:/Labs/Elteh/sem2/lab5/lab5-1.dpf"
 set_global_assignment -name USE_CONFIGURATION_DEVICE ON
 set_global_assignment -name GENERATE_RBF_FILE ON
+set_global_assignment -name BDF_FILE "lab5-2.bdf"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
 set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
 set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "3.3-V LVTTL"
-set_location_assignment PIN_56 -to A1
+set_location_assignment PIN_55 -to B
 set_location_assignment PIN_37 -to Button
+set_location_assignment PIN_54 -to C
 set_location_assignment PIN_16 -to CLK
-set_location_assignment PIN_91 -to pin_name
-set_location_assignment PIN_128 -to Q1
-set_location_assignment PIN_127 -to Q2
-set_location_assignment PIN_126 -to Q3
-set_location_assignment PIN_125 -to Q4
-set_location_assignment PIN_124 -to Q5
-set_location_assignment PIN_123 -to Q6
-set_location_assignment PIN_122 -to Q7
-set_location_assignment PIN_121 -to Q8
+set_location_assignment PIN_53 -to D
+set_location_assignment PIN_52 -to E
+set_location_assignment PIN_51 -to F
+set_location_assignment PIN_50 -to G
+set_location_assignment PIN_91 -to GEN
+set_location_assignment PIN_49 -to H
+set_location_assignment PIN_121 -to Q
+set_location_assignment PIN_56 -to STLD
+set_global_assignment -name MISC_FILE "E:/Labs/Elteh/sem2/lab5/lab5-2.dpf"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
