Переделал мэйк и распихал по папкам исходники

--- a/CompArch/Graphen/Makefile
+++ b/CompArch/Graphen/Makefile
@@ -1,5 +1,5 @@
 main: clear main2.o
-	gcc -o main main2.o -L. -lMyBigChars -lSimpleComputer -lMyTerm -lMyReadKey 
+	gcc -o main main2.o -Llib -lMyBigChars -lSimpleComputer -lMyTerm -lMyReadKey 
 
 main2.o: main2.c
 	gcc -c main2.c
