--- a/CompArch/Graphen/Makefile~1
+++ b/CompArch/Graphen/Makefile~1
@@ -1,8 +1,31 @@
-main: clear main2.o
-	gcc --debug -o main main2.o -L. -lMyBigChars -lSimpleComputer -lMyTerm -lMyReadKey 
+#Makefile~1
 
-main2.o: main2.c
-	gcc --debug -c main2.c
+main: clear main2.o sc.a mt.a mrk.a mbc.a
+	gcc -o main main2.o -Llib -lMyBigChars -lSimpleComputer -lMyTerm -lMyReadKey 
+
+sc.o:
+	gcc -c ./src/sc.c
+
+mt.o:
+	gcc -c ./src/myTerm.c
+
+mrk.o:
+	gcc -c ./src/myReadKey.c
+
+mbc.o:
+	gcc -c ./src/myBigChars.c
+	
+sc.a: sc.o
+	ar r ./lib/libSimpleComputer.a sc.o
+	
+mt.a: mt.o
+	ar r ./lib/libMyTerm.a myTerm.o
+	
+mrk.a: mrk.o
+	ar r ./lib/libMyReadKey.a myReadKey.o
+	
+mbc.a: mbc.o
+	ar r ./lib/libMyBigChars.a myBigChars.o myTerm.o
 
 clear:
-	rm -f *.o
+	rm -rf *.a *.o
