--- a/CompArch/Graphen/Makefile~1
+++ b/CompArch/Graphen/Makefile~1
@@ -1,38 +1,25 @@
 #Makefile~1
 
-MK_DIR = ./makes
+clear1: main
+	rm -rf *.o
 
-MAKES = $(wildcard $(MK_DIR)/*)
-
-main: clear makes main2.o
+main: clear makes2 makes3 makes4 makes5 main2.o 
 	gcc -o main main2.o -Llib -lMyBigChars -lSimpleComputer -lMyTerm -lMyReadKey 
 
-makes:
-	make -f $(MAKES)
+main2.o: main2.c
+	gcc -c main2.c
+	
+makes2:
+	make -f ./makes/MakefileLab2
 
-#sc.o:
-#	gcc -c ./src/sc.c
-#
-#mt.o:
-#	gcc -c ./src/myTerm.c
-#
-#mrk.o:
-#	gcc -c ./src/myReadKey.c
-#
-#mbc.o:
-#	gcc -c ./src/myBigChars.c
-#	
-# sc.a: sc.o
-#	ar r ./lib/libSimpleComputer.a sc.o
-#	
-#mt.a: mt.o
-#	ar r ./lib/libMyTerm.a myTerm.o
-#	
-#mrk.a: mrk.o
-#	ar r ./lib/libMyReadKey.a myReadKey.o
-#	
-#mbc.a: mbc.o
-#	ar r ./lib/libMyBigChars.a myBigChars.o myTerm.o
+makes3:
+	make -f ./makes/MakefileLab3
+
+makes4:
+	make -f ./makes/MakefileLab4
+
+makes5:
+	make -f ./makes/MakefileLab5
 
 clear:
 	rm -rf *.a *.o
