--- a/CompArch/Graphen/Makefile~1
+++ b/CompArch/Graphen/Makefile~1
@@ -3,14 +3,17 @@
 clear1: main
 	rm -rf *.o
 
-main: clear makes2 makes3 makes4 makes5 SimpleComputer.o main2.o 
-	gcc -Iheaders -o main main2.o SimpleComputer.o -Llib -lMyBigChars -lSimpleComputer -lMyTerm -lMyReadKey 
+main: clear makes2 makes3 makes4 makes5 ALUCU.o SimpleComputer.o main2.o 
+	gcc -Iheaders -o main main2.o SimpleComputer.o ALUCU.o -Llib -lMyBigChars -lSimpleComputer -lMyTerm -lMyReadKey 
 
 main2.o: main2.c
 	gcc -c main2.c
 	
 SimpleComputer.o:
 	gcc -c SimpleComputer.c
+	
+ALUCU.o:
+	gcc -c ALUCU.c
 	
 makes2:
 	make -f ./makes/MakefileLab2
