--- a/Ruban/3_sem/FNick/pom.xml
+++ b/Ruban/3_sem/FNick/pom.xml
@@ -12,7 +12,7 @@
         <junit.ver>4.12</junit.ver>
         <commons.io.ver>2.6</commons.io.ver>
         <java.ver>1.8</java.ver>
-        <xchart.ver>3.5.0</xchart.ver>
+        <plot.ver>1.0.1</plot.ver>
         <eval.ver>2.0</eval.ver>
     </properties>
 
@@ -30,11 +30,11 @@
             <version>${junit.ver}</version>
             <scope>test</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.knowm.xchart/xchart -->
+        <!-- https://mvnrepository.com/artifact/com.github.yannrichet/JMathPlot -->
         <dependency>
-            <groupId>org.knowm.xchart</groupId>
-            <artifactId>xchart</artifactId>
-            <version>${xchart.ver}</version>
+            <groupId>com.github.yannrichet</groupId>
+            <artifactId>JMathPlot</artifactId>
+            <version>${plot.ver}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.udojava/EvalEx -->
         <dependency>
