[Android] Распихал контент по активити

--- a/Programming/6_sem (Android)/Monstruos/Lab2/app/src/main/AndroidManifest.xml
+++ b/Programming/6_sem (Android)/Monstruos/Lab2/app/src/main/AndroidManifest.xml
@@ -18,10 +18,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".SecActivity"/>
-        <activity android:name=".ThirdActivity">
-        </activity>
-        <activity android:name=".FstActivity">
-        </activity>
+        <activity android:name=".ThirdActivity"/>
+        <activity android:name=".FstActivity"/>
     </application>
 
 </manifest>
