--- a/Network/Lab3/lab/project-files/dynamips/b576fdd2-65d2-405d-ad6a-e816ff21fd8e/configs/i3_startup-config.cfg
+++ b/Network/Lab3/lab/project-files/dynamips/b576fdd2-65d2-405d-ad6a-e816ff21fd8e/configs/i3_startup-config.cfg
@@ -2,6 +2,8 @@
 !
 !
 !
+!
+!
 
 !
 version 12.4
@@ -9,7 +11,7 @@ service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
-hostname Router
+hostname R2
 !
 boot-start-marker
 boot-end-marker
@@ -17,11 +19,13 @@ boot-end-marker
 !
 no aaa new-model
 memory-size iomem 5
+no ip icmp rate-limit unreachable
 ip cef
 !
 !
 !
 !
+no ip domain lookup
 !
 multilink bundle-name authenticated
 !
@@ -52,6 +56,7 @@ archive
 !
 !
 !
+ip tcp synwait-time 5
 !
 !
 !
@@ -72,14 +77,17 @@ interface FastEthernet1/0
  speed auto
 !
 ip forward-protocol nd
-ip route 10.255.6.0 255.255.255.252 10.255.5.2
-ip route 10.255.7.0 255.255.255.224 10.255.5.2
-ip route 10.255.8.0 255.255.255.224 10.255.3.2
+ip route 10.255.1.0 255.255.255.0 10.255.4.1
+ip route 10.255.2.0 255.255.255.0 10.255.3.2
+ip route 10.255.6.0 255.255.255.0 10.255.5.2
+ip route 10.255.7.0 255.255.255.0 10.255.5.2
+ip route 10.255.8.0 255.255.255.0 10.255.3.2
 !
 !
-ip http server
+no ip http server
 no ip http secure-server
 !
+no cdp log mismatch duplex
 !
 !
 !
@@ -98,8 +106,15 @@ control-plane
 !
 !
 line con 0
+ exec-timeout 0 0
+ privilege level 15
+ logging synchronous
 line aux 0
+ exec-timeout 0 0
+ privilege level 15
+ logging synchronous
 line vty 0 4
+ login
 !
 !
 end
