--- a/Network/Lab3/lab/project-files/dynamips/e849064c-2ead-4dc8-ab81-e86a375b216a/configs/i5_startup-config.cfg
+++ b/Network/Lab3/lab/project-files/dynamips/e849064c-2ead-4dc8-ab81-e86a375b216a/configs/i5_startup-config.cfg
@@ -1,6 +1,8 @@
 !
 !
 !
+!
+!
 
 !
 version 12.4
@@ -8,7 +10,7 @@ service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
-hostname Router
+hostname R3
 !
 boot-start-marker
 boot-end-marker
@@ -16,11 +18,13 @@ boot-end-marker
 !
 no aaa new-model
 memory-size iomem 5
+no ip icmp rate-limit unreachable
 ip cef
 !
 !
 !
 !
+no ip domain lookup
 !
 multilink bundle-name authenticated
 !
@@ -51,6 +55,7 @@ archive
 !
 !
 !
+ip tcp synwait-time 5
 !
 !
 !
@@ -66,11 +71,18 @@ interface FastEthernet0/1
  speed auto
 !
 ip forward-protocol nd
+ip route 10.255.1.0 255.255.255.0 10.255.6.1
+ip route 10.255.2.0 255.255.255.0 10.255.6.1
+ip route 10.255.3.0 255.255.255.0 10.255.6.1
+ip route 10.255.4.0 255.255.255.0 10.255.6.1
+ip route 10.255.5.0 255.255.255.0 10.255.6.1
+ip route 10.255.8.0 255.255.255.0 10.255.6.1
 !
 !
-ip http server
+no ip http server
 no ip http secure-server
 !
+no cdp log mismatch duplex
 !
 !
 !
@@ -89,7 +101,13 @@ control-plane
 !
 !
 line con 0
+ exec-timeout 0 0
+ privilege level 15
+ logging synchronous
 line aux 0
+ exec-timeout 0 0
+ privilege level 15
+ logging synchronous
 line vty 0 4
  login
 !
