--- a/Network/Lab3/lab/project-files/dynamips/00344e4b-b7d8-4f17-a705-28b2a4535a8a/configs/i4_startup-config.cfg
+++ b/Network/Lab3/lab/project-files/dynamips/00344e4b-b7d8-4f17-a705-28b2a4535a8a/configs/i4_startup-config.cfg
@@ -2,6 +2,7 @@
 !
 !
 !
+!
 
 !
 version 12.4
@@ -9,7 +10,7 @@ service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
-hostname Router
+hostname R5
 !
 boot-start-marker
 boot-end-marker
@@ -17,11 +18,13 @@ boot-end-marker
 !
 no aaa new-model
 memory-size iomem 5
+no ip icmp rate-limit unreachable
 ip cef
 !
 !
 !
 !
+no ip domain lookup
 !
 multilink bundle-name authenticated
 !
@@ -52,6 +55,7 @@ archive
 !
 !
 !
+ip tcp synwait-time 5
 !
 !
 !
@@ -67,11 +71,18 @@ interface FastEthernet0/1
  speed auto
 !
 ip forward-protocol nd
+ip route 10.255.1.0 255.255.255.0 10.255.5.1
+ip route 10.255.2.0 255.255.255.0 10.255.5.1
+ip route 10.255.3.0 255.255.255.0 10.255.5.1
+ip route 10.255.4.0 255.255.255.0 10.255.5.1
+ip route 10.255.7.0 255.255.255.0 10.255.6.2
+ip route 10.255.8.0 255.255.255.0 10.255.5.1
 !
 !
-ip http server
+no ip http server
 no ip http secure-server
 !
+no cdp log mismatch duplex
 !
 !
 !
@@ -90,8 +101,16 @@ control-plane
 !
 !
 line con 0
+ exec-timeout 0 0
+ privilege level 15
+ logging synchronous
 line aux 0
+ exec-timeout 0 0
+ privilege level 15
+ logging synchronous
 line vty 0 4
+ login
 !
 !
 end
+
