--- a/Network/Lab3/lab/project-files/dynamips/0062f53c-a9f7-4724-bc43-b106480b770a/configs/i1_startup-config.cfg
+++ b/Network/Lab3/lab/project-files/dynamips/0062f53c-a9f7-4724-bc43-b106480b770a/configs/i1_startup-config.cfg
@@ -1,8 +1,6 @@
 !
 !
 !
-!
-!
 
 !
 version 12.4
@@ -61,25 +59,53 @@ ip tcp synwait-time 5
 !
 !
 interface FastEthernet0/0
- ip address 10.255.1.2 255.255.255.224
+ ip address 10.255.1.2 255.255.255.248
+ shutdown
  duplex auto
  speed auto
 !
 interface FastEthernet0/1
- ip address 10.255.4.1 255.255.255.252
+ no ip address
+ shutdown
  duplex auto
  speed auto
 !
 interface FastEthernet1/0
- ip address 10.255.2.1 255.255.255.252
- duplex auto
- speed auto
+!
+interface FastEthernet1/1
+!
+interface FastEthernet1/2
+!
+interface FastEthernet1/3
+!
+interface FastEthernet1/4
+!
+interface FastEthernet1/5
+!
+interface FastEthernet1/6
+!
+interface FastEthernet1/7
+!
+interface FastEthernet1/8
+!
+interface FastEthernet1/9
+!
+interface FastEthernet1/10
+!
+interface FastEthernet1/11
+!
+interface FastEthernet1/12
+!
+interface FastEthernet1/13
+!
+interface FastEthernet1/14
+!
+interface FastEthernet1/15
+!
+interface Vlan1
+ no ip address
 !
 ip forward-protocol nd
-ip route 10.255.5.0 255.255.255.0 10.255.4.2
-ip route 10.255.6.0 255.255.255.0 10.255.4.2
-ip route 10.255.7.0 255.255.255.0 10.255.4.2
-ip route 10.255.8.0 255.255.255.0 10.255.2.2
 !
 !
 no ip http server
