Закончил делать лабу по Андроиду
Вроде работает... вроде.

--- a/Programming/6_sem (Android)/Lab6/app/src/main/AndroidManifest.xml
+++ b/Programming/6_sem (Android)/Lab6/app/src/main/AndroidManifest.xml
@@ -9,11 +9,21 @@
             android:theme="@style/AppTheme">
         <receiver android:name=".MyWidget">
             <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
             </intent-filter>
-            <meta-data android:name="android.appwidget.provider"
-                       android:resource="@xml/info" />
+
+            <meta-data
+                    android:name="android.appwidget.provider"
+                    android:resource="@xml/info"/>
         </receiver>
+
+        <activity android:name=".ConfigActivity">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
+            </intent-filter>
+        </activity>
+
+        <service android:name=".UpdateService"></service>
     </application>
 
 </manifest>
