--- a/Network/Course/Monstruos/Course_proj/project-files/dynamips/1ceacc43-6c1a-4f49-b4fd-33b6ef173858/configs/i5_startup-config.cfg
+++ b/Network/Course/Monstruos/Course_proj/project-files/dynamips/1ceacc43-6c1a-4f49-b4fd-33b6ef173858/configs/i5_startup-config.cfg
@@ -1,7 +1,4 @@
 !
-!
-!
-!
 
 !
 version 12.4
@@ -62,11 +59,13 @@ interface Loopback0
 interface FastEthernet0/0
  description toR2
  ip address 10.4.7.2 255.255.255.252
+ ip helper-address 10.4.55.208
+ duplex auto
  speed auto
- full-duplex
 !
 interface FastEthernet0/1
  ip address 10.4.8.1 255.255.255.252
+ ip helper-address 10.4.55.208
  duplex auto
  speed auto
 !
