--- a/Network/Course/Monstruos/Course_proj/project-files/dynamips/5719009c-d309-402d-b6e1-2fb568a333cc/configs/i4_startup-config.cfg
+++ b/Network/Course/Monstruos/Course_proj/project-files/dynamips/5719009c-d309-402d-b6e1-2fb568a333cc/configs/i4_startup-config.cfg
@@ -1,7 +1,4 @@
 !
-!
-!
-!
 
 !
 version 12.4
@@ -61,17 +58,19 @@ interface Loopback0
 !
 interface FastEthernet0/0
  ip address 10.4.4.2 255.255.255.252
+ ip helper-address 10.4.55.208
  speed auto
  full-duplex
 !
 interface FastEthernet0/1
  ip address 10.4.6.2 255.255.255.252
+ ip helper-address 10.4.55.208
  duplex auto
  speed auto
 !
 interface FastEthernet1/0
- ip address 10.4.2.1 255.255.248.0
- shutdown
+ ip address 10.4.32.1 255.255.248.0
+ ip helper-address 10.4.55.208
  duplex auto
  speed auto
 !
