--- a/Network/Course/Monstruos/Course_proj/project-files/dynamips/07c203bb-e439-48b3-9495-e259b0de0b04/configs/i3_startup-config.cfg
+++ b/Network/Course/Monstruos/Course_proj/project-files/dynamips/07c203bb-e439-48b3-9495-e259b0de0b04/configs/i3_startup-config.cfg
@@ -1,7 +1,4 @@
 !
-!
-!
-!
 
 !
 version 12.4
@@ -61,11 +58,13 @@ interface Loopback0
 !
 interface FastEthernet0/0
  ip address 10.4.8.2 255.255.255.252
+ ip helper-address 10.4.55.208
  duplex auto
  speed auto
 !
 interface FastEthernet0/1
  ip address 10.4.48.1 255.255.248.0
+ ip helper-address 10.4.55.208
  duplex auto
  speed auto
 !
