--- a/Network/Course/Monstruos/Course_proj/project-files/dynamips/a36fe02d-153f-43ab-84c0-cfb6549d7e54/configs/i2_startup-config.cfg
+++ b/Network/Course/Monstruos/Course_proj/project-files/dynamips/a36fe02d-153f-43ab-84c0-cfb6549d7e54/configs/i2_startup-config.cfg
@@ -1,8 +1,4 @@
 !
-!
-!
-!
-!
 
 !
 version 12.4
@@ -62,16 +58,19 @@ interface Loopback0
 !
 interface FastEthernet0/0
  ip address 10.4.5.2 255.255.255.252
+ ip helper-address 10.4.55.208
  duplex auto
  speed auto
 !
 interface FastEthernet0/1
  ip address 10.4.6.1 255.255.255.252
+ ip helper-address 10.4.55.208
  duplex auto
  speed auto
 !
 interface FastEthernet1/0
  ip address 10.4.7.1 255.255.255.252
+ ip helper-address 10.4.55.208
  speed auto
  half-duplex
 !
@@ -107,6 +106,7 @@ control-plane
 line con 0
 line aux 0
 line vty 0 4
+ login
 !
 !
 end
