--- a/Network/Course/Monstruos/Course_proj/project-files/dynamips/07c203bb-e439-48b3-9495-e259b0de0b04/configs/i3_startup-config.cfg
+++ b/Network/Course/Monstruos/Course_proj/project-files/dynamips/07c203bb-e439-48b3-9495-e259b0de0b04/configs/i3_startup-config.cfg
@@ -19,6 +19,7 @@ ip cef
 !
 !
 !
+ip multicast-routing 
 !
 multilink bundle-name authenticated
 !
@@ -58,20 +59,32 @@ interface Loopback0
 !
 interface FastEthernet0/0
  ip address 10.4.8.2 255.255.255.252
- ip helper-address 10.4.55.208
+ ip helper-address 10.4.101.2
+ ip pim dense-mode
+ ip igmp join-group 239.1.1.1
  duplex auto
  speed auto
 !
 interface FastEthernet0/1
  ip address 10.4.48.1 255.255.248.0
- ip helper-address 10.4.55.208
+ ip helper-address 10.4.101.2
+ ip pim dense-mode
+ ip igmp join-group 239.1.1.1
  duplex auto
  speed auto
+!
+interface FastEthernet0/1.2
+ encapsulation dot1Q 2
+ ip address 10.4.101.1 255.255.255.252
+ ip helper-address 10.4.101.2
+ ip pim dense-mode
+ ip igmp join-group 239.1.1.1
 !
 router ospf 1
  log-adjacency-changes
  network 10.4.8.0 0.0.0.3 area 0
  network 10.4.48.0 0.0.7.255 area 0
+ network 10.4.101.0 0.0.0.3 area 0
 !
 ip forward-protocol nd
 !
