Наработки курсовой (Сети)

--- a/Network/Course/Monstruos/Course_proj/project-files/dynamips/1ceacc43-6c1a-4f49-b4fd-33b6ef173858/configs/i5_startup-config.cfg
+++ b/Network/Course/Monstruos/Course_proj/project-files/dynamips/1ceacc43-6c1a-4f49-b4fd-33b6ef173858/configs/i5_startup-config.cfg
@@ -1,4 +1,5 @@
 !
+!
 
 !
 version 12.4
@@ -19,6 +20,7 @@ ip cef
 !
 !
 !
+ip multicast-routing 
 !
 multilink bundle-name authenticated
 !
@@ -60,12 +62,16 @@ interface FastEthernet0/0
  description toR2
  ip address 10.4.7.2 255.255.255.252
  ip helper-address 10.4.101.2
+ ip pim dense-mode
+ ip igmp join-group 239.1.1.1
  duplex auto
  speed auto
 !
 interface FastEthernet0/1
  ip address 10.4.8.1 255.255.255.252
  ip helper-address 10.4.101.2
+ ip pim dense-mode
+ ip igmp join-group 239.1.1.1
  duplex auto
  speed auto
 !
