--- a/Network/Course/Monstruos/Course_proj/project-files/dynamips/a36fe02d-153f-43ab-84c0-cfb6549d7e54/configs/i2_startup-config.cfg
+++ b/Network/Course/Monstruos/Course_proj/project-files/dynamips/a36fe02d-153f-43ab-84c0-cfb6549d7e54/configs/i2_startup-config.cfg
@@ -19,6 +19,7 @@ ip cef
 !
 !
 !
+ip multicast-routing 
 !
 multilink bundle-name authenticated
 !
@@ -59,18 +60,24 @@ interface Loopback0
 interface FastEthernet0/0
  ip address 10.4.5.2 255.255.255.252
  ip helper-address 10.4.101.2
+ ip pim dense-mode
+ ip igmp join-group 239.1.1.1
  duplex auto
  speed auto
 !
 interface FastEthernet0/1
  ip address 10.4.6.1 255.255.255.252
  ip helper-address 10.4.101.2
+ ip pim dense-mode
+ ip igmp join-group 239.1.1.1
  duplex auto
  speed auto
 !
 interface FastEthernet1/0
  ip address 10.4.7.1 255.255.255.252
  ip helper-address 10.4.101.2
+ ip pim dense-mode
+ ip igmp join-group 239.1.1.1
  speed auto
  half-duplex
 !
