--- a/Network/Course/Monstruos/Course_proj/project-files/dynamips/42819591-0747-47df-b5d2-f5044c90bc56/configs/i1_startup-config.cfg
+++ b/Network/Course/Monstruos/Course_proj/project-files/dynamips/42819591-0747-47df-b5d2-f5044c90bc56/configs/i1_startup-config.cfg
@@ -19,6 +19,7 @@ ip cef
 !
 !
 !
+ip multicast-routing 
 !
 multilink bundle-name authenticated
 !
@@ -59,18 +60,24 @@ interface Loopback0
 interface FastEthernet0/0
  ip address 10.4.16.1 255.255.254.0
  ip helper-address 10.4.101.2
+ ip pim dense-mode
+ ip igmp join-group 239.1.1.1
  duplex auto
  speed auto
 !
 interface FastEthernet0/1
  ip address 10.4.5.1 255.255.255.252
  ip helper-address 10.4.101.2
+ ip pim dense-mode
+ ip igmp join-group 239.1.1.1
  duplex auto
  speed auto
 !
 interface FastEthernet1/0
  ip address 10.4.4.1 255.255.255.252
  ip helper-address 10.4.101.2
+ ip pim dense-mode
+ ip igmp join-group 239.1.1.1
  speed auto
  half-duplex
 !
