Настроил RIP + виртуалки (Сети)
Больше всего страданий мне принесли виртуалки с 512МБ ОЗУ на борту. 2.5 часа из прошедших 3-х я потратил только на их перезапуск, когда что-то надо было поменять в "железе". На RIP же ушло меньше 10 минут. На очереди DHCP и вещание

--- a/Network/Course/FNick/project-files/dynamips/77d65ebf-120d-4806-865a-f0beda63e891/configs/i2_startup-config.cfg
+++ b/Network/Course/FNick/project-files/dynamips/77d65ebf-120d-4806-865a-f0beda63e891/configs/i2_startup-config.cfg
@@ -1,5 +1,6 @@
 !
 !
+!
 
 !
 version 12.4
@@ -7,7 +8,7 @@ service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
-hostname Router
+hostname R4
 !
 boot-start-marker
 boot-end-marker
@@ -69,6 +70,10 @@ interface FastEthernet1/0
  duplex auto
  speed auto
 !
+router rip
+ version 2
+ network 10.0.0.0
+!
 ip forward-protocol nd
 !
 !
@@ -95,6 +100,7 @@ control-plane
 line con 0
 line aux 0
 line vty 0 4
+ login
 !
 !
 end
