--- a/Network/Course/FNick/project-files/dynamips/0ddd0079-e1ad-4f7b-9b37-1ce919ba7c47/configs/i5_startup-config.cfg
+++ b/Network/Course/FNick/project-files/dynamips/0ddd0079-e1ad-4f7b-9b37-1ce919ba7c47/configs/i5_startup-config.cfg
@@ -1,5 +1,6 @@
 !
 !
+!
 
 !
 version 12.4
@@ -7,7 +8,7 @@ service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
-hostname Router
+hostname R3
 !
 boot-start-marker
 boot-end-marker
@@ -64,6 +65,10 @@ interface FastEthernet0/1
  duplex auto
  speed auto
 !
+router rip
+ version 2
+ network 10.0.0.0
+!
 ip forward-protocol nd
 !
 !
@@ -90,6 +95,7 @@ control-plane
 line con 0
 line aux 0
 line vty 0 4
+ login
 !
 !
 end
