--- a/Network/Course/FNick/project-files/dynamips/281a70d2-a296-4a10-b2a9-8e9db82d99af/configs/i1_startup-config.cfg
+++ b/Network/Course/FNick/project-files/dynamips/281a70d2-a296-4a10-b2a9-8e9db82d99af/configs/i1_startup-config.cfg
@@ -1,5 +1,7 @@
 !
 !
+!
+!
 
 !
 version 12.4
@@ -7,7 +9,7 @@ service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
-hostname Router
+hostname R1
 !
 boot-start-marker
 boot-end-marker
@@ -68,6 +70,10 @@ interface FastEthernet1/0
  ip address 10.2.2.1 255.255.255.252
  duplex auto
  speed auto
+!
+router rip
+ version 2
+ network 10.0.0.0
 !
 ip forward-protocol nd
 !
