--- a/Network/Course/FNick/project-files/dynamips/d7ab0911-6f09-497a-aa7b-42faebadecce/configs/i3_startup-config.cfg
+++ b/Network/Course/FNick/project-files/dynamips/d7ab0911-6f09-497a-aa7b-42faebadecce/configs/i3_startup-config.cfg
@@ -7,7 +7,7 @@ service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
-hostname Router
+hostname R2
 !
 boot-start-marker
 boot-end-marker
@@ -69,6 +69,10 @@ interface FastEthernet1/0
  duplex auto
  speed auto
 !
+router rip
+ version 2
+ network 10.0.0.0
+!
 ip forward-protocol nd
 !
 !
@@ -95,6 +99,7 @@ control-plane
 line con 0
 line aux 0
 line vty 0 4
+ login
 !
 !
 end
