Наработки курсача (Сети)
В процессе коммита что-то пошло не так, мне пришлось это все откатывать, так что какие-то изменения могли потеряться. Ненавижу этот предмет

--- a/Network/Course/FNick/project-files/dynamips/0ddd0079-e1ad-4f7b-9b37-1ce919ba7c47/configs/i5_startup-config.cfg
+++ b/Network/Course/FNick/project-files/dynamips/0ddd0079-e1ad-4f7b-9b37-1ce919ba7c47/configs/i5_startup-config.cfg
@@ -1,6 +1,4 @@
 !
-!
-!
 
 !
 version 12.4
@@ -21,6 +19,7 @@ ip cef
 !
 !
 !
+ip multicast-routing 
 !
 multilink bundle-name authenticated
 !
@@ -57,11 +56,15 @@ archive
 !
 interface FastEthernet0/0
  ip address 10.2.6.2 255.255.255.252
+ ip helper-address 10.2.24.2
+ ip pim dense-mode
  duplex auto
  speed auto
 !
 interface FastEthernet0/1
  ip address 10.2.24.1 255.255.248.0
+ ip helper-address 10.2.24.2
+ ip pim dense-mode
  duplex auto
  speed auto
 !
