--- a/Network/Course/FNick/project-files/dynamips/d7ab0911-6f09-497a-aa7b-42faebadecce/configs/i3_startup-config.cfg
+++ b/Network/Course/FNick/project-files/dynamips/d7ab0911-6f09-497a-aa7b-42faebadecce/configs/i3_startup-config.cfg
@@ -56,11 +56,13 @@ archive
 !
 interface FastEthernet0/0
  ip address 10.2.4.2 255.255.255.252
+ ip helper-address 10.2.24.2
  duplex auto
  speed auto
 !
 interface FastEthernet0/1
  ip address 10.2.3.1 255.255.255.252
+ ip helper-address 10.2.24.2
  duplex auto
  speed auto
 !
