--- a/Network/Course/FNick/project-files/dynamips/281a70d2-a296-4a10-b2a9-8e9db82d99af/configs/i1_startup-config.cfg
+++ b/Network/Course/FNick/project-files/dynamips/281a70d2-a296-4a10-b2a9-8e9db82d99af/configs/i1_startup-config.cfg
@@ -1,7 +1,6 @@
 !
 !
 !
-!
 
 !
 version 12.4
@@ -57,7 +56,8 @@ archive
 !
 !
 interface FastEthernet0/0
- ip address 10.2.8.2 255.255.254.0
+ ip address 10.2.8.1 255.255.254.0
+ ip helper-address 10.2.24.2
  duplex auto
  speed auto
 !
