--- a/Network/Course/FNick/project-files/dynamips/77d65ebf-120d-4806-865a-f0beda63e891/configs/i2_startup-config.cfg
+++ b/Network/Course/FNick/project-files/dynamips/77d65ebf-120d-4806-865a-f0beda63e891/configs/i2_startup-config.cfg
@@ -1,6 +1,5 @@
 !
 !
-!
 
 !
 version 12.4
@@ -67,6 +66,7 @@ interface FastEthernet0/1
 !
 interface FastEthernet1/0
  ip address 10.2.16.1 255.255.252.0
+ ip helper-address 10.2.24.2
  duplex auto
  speed auto
 !
