--- a/Network/Course/FNick/project-files/dynamips/ca374399-0ac0-41f8-a06d-845b0aa18d39/configs/i4_startup-config.cfg
+++ b/Network/Course/FNick/project-files/dynamips/ca374399-0ac0-41f8-a06d-845b0aa18d39/configs/i4_startup-config.cfg
@@ -57,6 +57,7 @@ archive
 !
 interface FastEthernet0/0
  ip address 10.2.5.2 255.255.255.252
+ ip helper-address 10.2.24.2
  duplex auto
  speed auto
 !
