Почти готовая курсовая по Сетям
Я все равно её сдал

--- a/Network/Course/FNick/project-files/dynamips/281a70d2-a296-4a10-b2a9-8e9db82d99af/configs/i1_startup-config.cfg
+++ b/Network/Course/FNick/project-files/dynamips/281a70d2-a296-4a10-b2a9-8e9db82d99af/configs/i1_startup-config.cfg
@@ -21,6 +21,7 @@ ip cef
 !
 !
 !
+ip multicast-routing 
 !
 multilink bundle-name authenticated
 !
@@ -58,16 +59,19 @@ archive
 interface FastEthernet0/0
  ip address 10.2.8.1 255.255.254.0
  ip helper-address 10.2.24.2
+ ip pim dense-mode
  duplex auto
  speed auto
 !
 interface FastEthernet0/1
  ip address 10.2.4.1 255.255.255.252
+ ip pim dense-mode
  duplex auto
  speed auto
 !
 interface FastEthernet1/0
  ip address 10.2.2.1 255.255.255.252
+ ip pim dense-mode
  duplex auto
  speed auto
 !
