--- a/Network/Course/FNick/project-files/dynamips/d7ab0911-6f09-497a-aa7b-42faebadecce/configs/i3_startup-config.cfg
+++ b/Network/Course/FNick/project-files/dynamips/d7ab0911-6f09-497a-aa7b-42faebadecce/configs/i3_startup-config.cfg
@@ -1,5 +1,6 @@
 !
 !
+!
 
 !
 version 12.4
@@ -20,6 +21,7 @@ ip cef
 !
 !
 !
+ip multicast-routing 
 !
 multilink bundle-name authenticated
 !
@@ -57,17 +59,20 @@ archive
 interface FastEthernet0/0
  ip address 10.2.4.2 255.255.255.252
  ip helper-address 10.2.24.2
+ ip pim dense-mode
  duplex auto
  speed auto
 !
 interface FastEthernet0/1
  ip address 10.2.3.1 255.255.255.252
  ip helper-address 10.2.24.2
+ ip pim dense-mode
  duplex auto
  speed auto
 !
 interface FastEthernet1/0
  ip address 10.2.5.1 255.255.255.252
+ ip pim dense-mode
  duplex auto
  speed auto
 !
