--- a/Network/Course/FNick/project-files/dynamips/77d65ebf-120d-4806-865a-f0beda63e891/configs/i2_startup-config.cfg
+++ b/Network/Course/FNick/project-files/dynamips/77d65ebf-120d-4806-865a-f0beda63e891/configs/i2_startup-config.cfg
@@ -1,5 +1,6 @@
 !
 !
+!
 
 !
 version 12.4
@@ -20,6 +21,7 @@ ip cef
 !
 !
 !
+ip multicast-routing 
 !
 multilink bundle-name authenticated
 !
@@ -56,17 +58,20 @@ archive
 !
 interface FastEthernet0/0
  ip address 10.2.3.2 255.255.255.252
+ ip pim dense-mode
  duplex auto
  speed auto
 !
 interface FastEthernet0/1
  ip address 10.2.2.2 255.255.255.252
+ ip pim dense-mode
  duplex auto
  speed auto
 !
 interface FastEthernet1/0
  ip address 10.2.16.1 255.255.252.0
  ip helper-address 10.2.24.2
+ ip pim dense-mode
  duplex auto
  speed auto
 !
