--- a/Network/Course/FNick/project-files/dynamips/ca374399-0ac0-41f8-a06d-845b0aa18d39/configs/i4_startup-config.cfg
+++ b/Network/Course/FNick/project-files/dynamips/ca374399-0ac0-41f8-a06d-845b0aa18d39/configs/i4_startup-config.cfg
@@ -21,6 +21,7 @@ ip cef
 !
 !
 !
+ip multicast-routing 
 !
 multilink bundle-name authenticated
 !
@@ -58,11 +59,13 @@ archive
 interface FastEthernet0/0
  ip address 10.2.5.2 255.255.255.252
  ip helper-address 10.2.24.2
+ ip pim dense-mode
  duplex auto
  speed auto
 !
 interface FastEthernet0/1
  ip address 10.2.6.1 255.255.255.252
+ ip pim dense-mode
  duplex auto
  speed auto
 !
